[package]
name = "dungeon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"

futures-util = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

notify = { version = "5.0", default-features = false, features=["macos_fsevent"] }
notify-debouncer-mini = "0.2.1"
futures = "*"
futures-core = "*"
async-stream = "*"

lazy_static = "1.4"
